<resources>
    <string name="app_name">Petcéntrico</string>
    <string name="signup_label">Registrarse</string>
    <string name="forgot_password_label">Olvide mi contraseña</string>
    <string name="login_label">Ingresar</string>
    <string name="password_label">Constraseña</string>
    <string name="email_label">Correo</string>
    <string name="profile_label">Perfil</string>
    <string name="profile_name">Nombre</string>
    <string name="profile_phone">Telefono</string>
    <string name="profile_update">Actualizar</string>
    <string name="snackbar_dismiss_label">Cerrar</string>
    <string name="snackbar_comfirm_label">Ok</string>
</resources>